# ocr-pdf-cli

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  cli.md  engines.md
src/ocr_pdf_cli/: __init__.py  version.py
src/ocr_pdf_cli/cli/: __init__.py  commands.py  main.py  parser.py
src/ocr_pdf_cli/config/: __init__.py  settings.py
src/ocr_pdf_cli/core/: __init__.py  image_preprocessor.py  pdf_loader.py  pdf_writer.py  pipeline.py  text_postprocessor.py
src/ocr_pdf_cli/engines/: __init__.py  base.py  easyocr.py  factory.py  paddleocr.py  tesseract.py
src/ocr_pdf_cli/exporters/: __init__.py  markdown.py  pdf.py  txt.py
src/ocr_pdf_cli/models/: __init__.py  document.py  ocr_result.py  page.py
src/ocr_pdf_cli/utils/: __init__.py  files.py  logger.py  system.py
tests/: test_cli.py  test_pdf_loader.py  test_preprocessor.py  test_tesseract.py  test_writer.py
